--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leon Template one</title>
     <!-- Main template CSS file  -->
-    <link rel="stylesheet" href="../HTML&CSS template 1/css_files/leon.css">
+    <link rel="stylesheet" href="../HTML-CSS-template-one/css_files/leon.css">
     <!-- Render all elements normaly -->
-    <link rel="stylesheet" href="../HTML&CSS template 1/css_files/normalize.css"> 
+    <link rel="stylesheet" href="../HTML-CSS-template-one/css_files/normalize.css"> 
     <!-- Fonts Awsome Library -->
-    <link rel="stylesheet" href="../HTML&CSS template 1/css_files/all.min.css">
+    <link rel="stylesheet" href="../HTML-CSS-template-one/css_files/all.min.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +21,7 @@
    <!-- Start header  -->
    <div class="header">
       <div class="container">
-         <img class="logo" src="../HTML&CSS template 1/images/logo.PNG" alt="">
+         <img class="logo" src="../HTML-CSS-template-one/images/logo.PNG" alt="">
          <div class="links">
            <span class="icon">
             <span></span>
@@ -123,7 +123,7 @@
             </div>
             <div class="col">
               <div class="image image-column">
-               <img src="../HTML&CSS template 1/images/services.PNG" alt="">
+               <img src="../HTML-CSS-template-one/images/services.PNG" alt="">
               </div>
             </div>
          </div>
@@ -138,7 +138,7 @@
          <div class="portfolio-content">
             <div class="cont">
                <div class="image">
-                  <img src="../HTML&CSS template 1/images/port-1.PNG" alt="">
+                  <img src="../HTML-CSS-template-one/images/port-1.PNG" alt="">
                </div>
                <div class="text">
                   <h3>Project Here</h3>
@@ -147,7 +147,7 @@
             </div>
             <div class="cont">
                <div class="image">
-                  <img src="../HTML&CSS template 1/images/port-2.PNG" alt="">
+                  <img src="../HTML-CSS-template-one/images/port-2.PNG" alt="">
                </div>
                <div class="text">
                   <h3>Project Here</h3>
@@ -156,7 +156,7 @@
             </div>
             <div class="cont">
                <div class="image">
-                  <img src="../HTML&CSS template 1/images/port-3.PNG" alt="">
+                  <img src="../HTML-CSS-template-one/images/port-3.png" alt="">
                </div>
                <div class="text">
                   <h3>Project Here</h3>
@@ -174,7 +174,7 @@
          <p>Less is more work.</p>
          <div class="about-content">
             <div class="image">
-               <img src="images/about.jpg" alt="">
+               <img src="../HTML-CSS-template-one/images/about.jpg" alt="">
             </div>
             <div class="text">
                <p>
